<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity">

    <TextView
        android:id="@+id/show_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_tv"
        android:textSize="@dimen/info_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_small"
        android:layout_marginTop="@dimen/tv_size_txt"
        android:layout_marginEnd="@dimen/space_small"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_title_tv"
            android:textSize="@dimen/tv_size_attributes"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/title_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/status_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_status_tv"
            android:textSize="@dimen/tv_size_attributes"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/status_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/status_tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_type_tv"
            android:textSize="@dimen/tv_size_attributes"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/title_et"
            tools:layout_editor_absoluteX="0dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/type_tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/title_et"
                tools:layout_editor_absoluteX="0dp" />
        </LinearLayout>


        <TextView
            android:id="@+id/dueDate_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_due_date_tv"
            android:textSize="@dimen/tv_size_attributes"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_et" />

        <TextView
            android:id="@+id/dueDate_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_date_tv"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/desc_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_description_tv"
            android:textSize="@dimen/tv_size_attributes"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/type_rg" />

        <TextView
            android:id="@+id/desc_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/type_rg" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>